--- a/frontend/public/app-inventory.html
+++ b/frontend/public/app-inventory.html
@@ -13,8 +13,8 @@
 
     <template is="dom-if" if="{{isAuthenticated}}">
       <app-router>
-        <page-vehicle-details path="/dealer/:dealerId/vehicle/:vehicleId"></page-vehicle-details>
-        <page-dealer-details path="/dealer/:dealerId"></page-dealer-details>
+        <page-vehicle-details path="/dealership/:dealershipId/vehicle/:vehicleId"></page-vehicle-details>
+        <page-dealer-details path="/dealership/:dealershipId"></page-dealer-details>
         <page-dealer-list path="*"></page-category-list>
       </app-router>
     </template>
