add a vehicle list page so that even with large datasets we can show a list of vehicles and dealers without drilling down or hitting timeouts on datasets over 1 million records

--- a/frontend/public/pages/page-dealer-list.html
+++ b/frontend/public/pages/page-dealer-list.html
@@ -10,10 +10,6 @@
       margin-bottom: 30px;
     }
 
-    .content-body {
-      width: 500px;
-    }
-
     .content-container {
       width: 100%;
       display: flex;
@@ -53,6 +49,7 @@
     </template>
 
     <div class="content-container">
+      <a href="/#!/vehicleslist">View Vehicles</a>
       <h2 class="content-row heading">Inventory Dealerships</h2>
       <div class="content-body">
         <div class="content-row">
