--- a/frontend/public/app-inventory.html
+++ b/frontend/public/app-inventory.html
@@ -3,6 +3,7 @@
 <link rel="import" href="/pages/page-vehicle-details.html">
 <link rel="import" href="/pages/page-dealer-details.html">
 <link rel="import" href="/pages/page-dealer-list.html">
+<link rel="import" href="/pages/page-vehicle-list.html">
 <link rel="import" href="/pages/page-login.html">
 
 <script type="text/javascript" src="/bower_components/page/page.js"></script>
@@ -15,7 +16,8 @@
       <app-router>
         <page-vehicle-details path="/dealership/:dealershipId/vehicle/:vehicleId"></page-vehicle-details>
         <page-dealer-details path="/dealership/:dealershipId"></page-dealer-details>
-        <page-dealer-list path="*"></page-category-list>
+        <page-vehicle-list path="/vehicleslist"></page-vehicle-list>
+        <page-dealer-list path="*"></page-dealer-list>
       </app-router>
     </template>
     <template is="dom-if" if="{{!isAuthenticated}}">
