--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SocketCluster Inventory Tracking Sample</title>
+    <title>Inventory Tracking Example</title>
     <link href="//fonts.googleapis.com/css?family=Roboto:100,300" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/png" href="/favicon.ico">
     <link rel="stylesheet" type="text/css" href="/libs/bootstrap/css/bootstrap.min.css">
